--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,3 +1,7 @@
 <h1>Sign Up Below:</h1>
-
-
+<form method="POST" action="/registrations">
+    <input type="text" name="name">
+    <input type="password" name="password">
+    <input type="text" name="email">
+    <button type="submit">Sign Up</button>
+</form>
